--- a/main.css
+++ b/main.css
@@ -285,6 +285,7 @@ li {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding: 2rem;
 }
 
